# BetterAI

./: .gitignore  .gitmodules  NEXT_STEPS.md  README.md  benchmark_plan.md  docker-compose.yml  main.ipynb  main.py  pyproject.toml
common/: get_source.py  tokenize.py  tokenize_alt.py
database/rdf/: rdf.py  triple.py  tripleset.py
database/redis/: redis.py
evaluation/: baselines.py  compute_metrics.py  judge_claims.py  load_pubmedqa.py  metrics.py  retrieval.py  retrieval_metrics.py  run_eval.py  train_pubmedqa_baseline.py  train_pubmedqa_transformer.py  utils.py
pipeline_01_processing/: README.md  pipeline.py  tokens_to_rdf.py
pipeline_02_retrieval/: generation.py  patient_context.py  pipeline.py  sources.py  summarize.py  tokens_to_query.py
pipeline_02_retrieval/schemas/: doc.py  output.py
runs/: pubmedqa_baseline.jsonl
schemas/: schemas.py
tests/: conftest.py  test_dependency_parse.py  test_judge_claims.py  test_retrieval_pipeline.py  test_source_citations.py  test_tokens_to_rdf.py
